--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -4,6 +4,29 @@
   width:100%;
   height: inherit;
 }
+html, body{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: #FFFFFF;
+}
+html{
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+p{
+  padding: 0;
+  margin: 0;
+}
+a{
+  text-decoration: none;
+}
+
 .header{
   height: 130px;
   width:100%;
@@ -23,7 +46,7 @@
     box-sizing: border-box;
     border-radius:21px;
     margin:35px 17px 12px 17px;
-    border: 0;
+    border: none;
    // outline: none;
     padding-left: 50px;
   }
@@ -54,4 +77,249 @@
   .routeractive{
     border-bottom: 2px solid #FFFFFF;
   }
+}
+.list {
+  .item {
+    list-style: none;
+    align-items: center;
+    margin: 25px 18px 15px 18px;
+
+    .top {
+      display: flex;
+      margin-top: 35px;
+
+      .icon {
+        width: 48px;
+        height: 48px;
+        flex: 0 0 37px;
+        padding-right: 20px;
+      }
+
+      .text {
+        display: flex;
+        flex-direction: column;
+        font-size: 14px;
+        justify-content: center;
+        flex: 1;
+        line-height: 20px;
+        font-size: 14px;
+        overflow: hidden;
+        height: 48px;
+
+        h2 {
+          font-size: 14px;
+          margin: 0
+        }
+
+        p {
+          color: #9d9d9d;
+          margin-top: 5px;
+        }
+
+      }
+    }
+    .content {
+      margin: 10px;
+      display: inline-block;
+      padding-right: 5px;
+      width:100%;
+      height: 150px;
+      display: inline-block;
+      h2{
+        font-size: 14px;
+      }
+      .pic2 {
+        width: 122px;
+        height: 70px;
+        background-size: contain;
+        background-image: url("../image/2.png");
+        display: inline-block;
+      }
+      .pic3{
+        width: 130px;
+        height:70px;
+        background-size: contain;
+        background-image: url("../image/3.png");
+        display: inline-block;
+      }
+    }
+      .extra {
+        display:flex;
+
+        .zan {
+        flex: 1;
+          text-align: center;
+        }
+        .commend {
+        flex: 1;
+          text-align: center;
+        }
+        .send {
+        flex: 1;
+          text-align: center;
+        }
+      }
+    }
+
+  }
+.line{
+  width:100%;
+  height: 10px;
+  background-color: #f4f4f4;
+}
+.am-search-input{
+  background-color: #e6e6e6;
+  border-radius: 14px;
+}
+.am-search{
+  background-color: #FFFFFF;
+}
+.nav{
+  display: flex;
+  height: 30px;
+  box-sizing: border-box;
+  border-bottom: 2px solid #ebebeb;
+}
+.nav >a{
+  flex: 1;
+  text-align: center;
+  font-size: 16px;
+  color: #818181;
+  height: 30px;
+  box-sizing: border-box;
+}
+.click{
+  color: #191919;
+  border-bottom: 2px solid #191919;
+  width:16px;
+}
+.navlogo_container{
+  display: flex;
+  margin-top: 20px;
+  text-align: center;
+  .searchmovie{
+    flex: 1;
+    p{
+      color: #818181;
+      font-size: 16px;
+      margin-top: 8px;
+    }
+  }
+  .bangdan{
+    flex: 1;
+    p{
+      color: #818181;
+      font-size: 16px;
+      margin-top: 8px;
+    }
+  }
+  .gruss{
+    flex: 1;
+    p{
+      color: #818181;
+      font-size: 16px;
+      margin-top: 8px;
+    }
+  }
+  .list{
+    flex: 1;
+    p{
+      color: #818181;
+      font-size: 16px;
+      margin-top: 8px;
+    }
+  }
+}
+.box{
+  box-sizing: border-box;
+  height: 120px;
+  width: 92%;
+  background-color: #7c7b7f;
+  margin-top:50px;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 5px;
+  display: flex;
+  .picmovie{
+    flex: 1;
+  }
+  p{
+    color: #f2f2f2;
+    float: right;
+    margin-top: 20px;
+    font-size: 16px;
+    margin-right: 25px;
+    flex: 1;
+  }
+}
+.listcontent{
+  height: 30px;
+  margin-left: 15px;
+  margin-top: 30px;
+  border-bottom:2px solid #818181 ;
+  padding-bottom: 5px;
+  .hot{
+    color: #191919;
+    font-size: 21px;
+    margin-right: 15px;
+  }
+  .play{
+    color: #818181;
+    font-size: 21px;
+  }
+  .all{
+    float: right;
+    color: #191919;
+    font-size: 15px;
+    margin-right: 30px;
+    line-height: 30px;
+  }
+  .click{
+    border-bottom:2px solid #191919;
+    padding-bottom: 2px;
+    padding-bottom: 7px;
+  }
+}
+.movie{
+  display: flex;
+  img{
+    flex: 1;
+  }
+}
+.personal{
+  background: #51c061;
+  height: 200px;
+  width: 100%;
+  position: relative;
+  .pheader{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    top: 50%;
+    transform: translate(0, -50%);
+    display: flex;
+    .perpic{
+      flex: 0 0 125px;
+      img{
+        border-radius: 33px;
+        border: 2px solid #FFFFFF;
+      }
+    }
+    .username{
+      color: #ffffff;
+    }
+    .personpage{
+      color: #ffffff;
+    }
+  }
+
+}
+.list-content{
+  text-align: center;
+  color: #9b9b9b;
+}
+.am-list-content{
+  text-align: center;
+  color: #9b9b9b;
 }
