--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -62,6 +62,7 @@ a{
 .tab{
   font-size: 17px;
   text-align: center;
+  height: 40px;
   .state{
     color:#FFF;
     margin-right: 77px;
@@ -78,90 +79,6 @@ a{
     border-bottom: 2px solid #FFFFFF;
   }
 }
-.list {
-  .item {
-    list-style: none;
-    align-items: center;
-    margin: 25px 18px 15px 18px;
-
-    .top {
-      display: flex;
-      margin-top: 35px;
-
-      .icon {
-        width: 48px;
-        height: 48px;
-        flex: 0 0 37px;
-        padding-right: 20px;
-      }
-
-      .text {
-        display: flex;
-        flex-direction: column;
-        font-size: 14px;
-        justify-content: center;
-        flex: 1;
-        line-height: 20px;
-        font-size: 14px;
-        overflow: hidden;
-        height: 48px;
-
-        h2 {
-          font-size: 14px;
-          margin: 0
-        }
-
-        p {
-          color: #9d9d9d;
-          margin-top: 5px;
-        }
-
-      }
-    }
-    .content {
-      margin: 10px;
-      display: inline-block;
-      padding-right: 5px;
-      width:100%;
-      height: 150px;
-      display: inline-block;
-      h2{
-        font-size: 14px;
-      }
-      .pic2 {
-        width: 122px;
-        height: 70px;
-        background-size: contain;
-        background-image: url("../image/2.png");
-        display: inline-block;
-      }
-      .pic3{
-        width: 130px;
-        height:70px;
-        background-size: contain;
-        background-image: url("../image/3.png");
-        display: inline-block;
-      }
-    }
-      .extra {
-        display:flex;
-
-        .zan {
-        flex: 1;
-          text-align: center;
-        }
-        .commend {
-        flex: 1;
-          text-align: center;
-        }
-        .send {
-        flex: 1;
-          text-align: center;
-        }
-      }
-    }
-
-  }
 .line{
   width:100%;
   height: 10px;
@@ -242,6 +159,12 @@ a{
   display: flex;
   .picmovie{
     flex: 1;
+    img{
+      width:98px;
+      height: 80px;
+      margin-left:20px;
+      margin-top:20px;
+    }
   }
   p{
     color: #f2f2f2;
@@ -348,4 +271,81 @@ a{
       margin-right: 5px;
     }
   }
+}
+.stateList{
+  padding: 30px;
+  .title{
+    display: flex;
+    margin-bottom: 13px;
+    .avatar{
+      width:65px;
+      vertical-align: baseline;
+    }
+    .flex-wrapper{
+      flex:2;
+      display: flex;
+      flex-direction: column;
+      .title{
+        flex: 1;
+      }
+      .tag{
+        flex: 1;
+        color: #bbb;
+      }
+    }
+  }
+  .article{
+    .content{
+      flex: 1;
+      word-break:break-all;
+      overflow:hidden;
+      height: 50px;
+      text-overflow: ellipsis;
+
+    }
+  }
+  .pic{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+  }
+  .pic img{
+    flex: 1;
+    width: 100%;
+  }
+}
+.small{
+  margin-bottom:10px;
+  .small-wrapper {
+    display: flex;
+    .thumb,.commend,.sendTo{
+      flex: 1;
+      text-align: center;
+    }
+  }
+}
+.mine-wrapper{
+  width:100%;
+  box-sizing: border-box;
+  .title{
+    display: flex;
+    background: #42bd56;
+    padding: 30px ;
+    .avatar{
+      width:75px;
+    }
+    .content{
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      .name,.focus{
+        flex: 1;
+      }
+    }
+  }
+}
+.am-list-content{
+  padding-left: 30px;
 }
